Вставлены преобразования типов, тип opacity сделан sf::Uint8

--- a/RefactoringTMXLevel/RefactoringTMXLevel.vcxproj.filters
+++ b/RefactoringTMXLevel/RefactoringTMXLevel.vcxproj.filters
@@ -18,9 +18,21 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="lib\tinyxml2\tinyxml2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TmxLevel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="lib\tinyxml2\tinyxml2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TmxLevel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
