--- a/RefactoringTMXLevel/RefactoringTMXLevel.vcxproj
+++ b/RefactoringTMXLevel/RefactoringTMXLevel.vcxproj
@@ -130,10 +130,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="lib\tinyxml2\tinyxml2.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="TmxLevel.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="lib\tinyxml2\tinyxml2.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="TmxLevel.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
